hphp/test/zend/good/Zend/tests/bug41919.php.expectf

Fatal error: Operator not supported for strings in %s/bug41919.php on line 3
